--- a/themes/san-diego/source/styles/_responsive-layouts.scss
+++ b/themes/san-diego/source/styles/_responsive-layouts.scss
@@ -568,7 +568,7 @@
 				0 2px 10px rgb(0 0 0 / 5%),
 				0 1px 3px rgb(0 0 0 / 10%),
 				inset 0 1px 0 rgb(255 255 255 / 50%);
-			border: 1px solid rgb(0 0 0 / 8%);
+			border: 1px solid rgba(87.975, 78.4125, 65.025, 0.05);
 			border-right: 0;
 			border-bottom: 0;
 			padding: 0;
@@ -750,7 +750,7 @@
 				0 2px 10px rgb(0 0 0 / 5%),
 				0 1px 3px rgb(0 0 0 / 10%),
 				inset 0 1px 0 rgb(255 255 255 / 50%);
-			border: 1px solid rgb(0 0 0 / 8%);
+			border: 1px solid rgba(87.975, 78.4125, 65.025, 0.05);
 			border-right: 0;
 			border-bottom: 0;
 			padding: 0;
@@ -943,7 +943,7 @@
 					0 2px 10px rgb(0 0 0 / 5%),
 					0 1px 3px rgb(0 0 0 / 10%),
 					inset 0 1px 0 rgb(255 255 255 / 50%);
-				border: 1px solid rgb(0 0 0 / 8%);
+				border: 1px solid rgba(87.975, 78.4125, 65.025, 0.05);
 				padding: 0;
 				padding-bottom: 0;
 				margin-bottom: variables.$space-md;
